# simulator

./: .gitignore  Makefile  README.md
include/: cli.h  component.h  context.h  debug.h  info.h  latch.h  particle.h  phys.h  sim_settings.h  sim_time.h  simulation.h  status.h  vector.h  window.h
include/component/: particle.h  vector.h  wall.h
include/context/: physics.h  simulation.h
include/demo/: demo.h
include/internal/: particle.h  vector.h  wall.h
include/util/: fixed_point.h  integer.h  latch.h  range.h  ring_buffer.h  root.py  status.h
src/: main.cpp
src/cli/: cli.cpp
src/component/: particle.cpp  particle.tpp  vector.cpp  vector.tpp
src/demo/: demo.cpp  demo.tpp
src/graphics/: window.cpp
src/phys/: phys.cpp  phys.tpp
src/physics/: physics.cpp
src/simulation/: simulation.cpp
src/util/: fixed_point.cpp
tst/: CMakeLists.txt  test_fixed.cc  test_particle.cc  test_sim.cc  test_vector.cc  timer.h
